--- a/new-k8s/infra-resources/provision-nginx-cert-issuer.yaml
+++ b/new-k8s/infra-resources/provision-nginx-cert-issuer.yaml
@@ -128,6 +128,20 @@
                     api-token: "{{ '{{' }} .CLOUDFLARE_API_TOKEN.Value {{ '}}' }}"
       when: cert_issuer == "cloudflare-dns01"
 
+    - name: Wait for cloudflare-api-token-secret Secret to be created by Infisical
+      kubernetes.core.k8s_info:
+        kind: Secret
+        name: cloudflare-api-token-secret
+        namespace: cert-manager
+        kubeconfig: "{{ kubeconfig }}"
+        context: "{{ kube_context if kube_context else omit }}"
+      register: cloudflare_token_secret
+      until: cloudflare_token_secret.resources | length > 0
+      retries: 30
+      delay: 10
+      failed_when: cloudflare_token_secret.resources | length == 0
+      when: cert_issuer == "cloudflare-dns01"
+
     - name: Apply ClusterIssuer YAML for HTTP01 challenge
       kubernetes.core.k8s:
         state: present
