--- a/new-k8s/ansible/provision-cluster.yml
+++ b/new-k8s/ansible/provision-cluster.yml
@@ -176,83 +176,35 @@
       failed_when: pull_images.rc != 0
       run_once: true
 
-    - name: Write kube-vip DaemonSet manifest to file
-      ansible.builtin.copy:
-        dest: "/etc/kubernetes/manifests/kube-vip.yaml"
-        mode: "0644"
-        content: |
-          apiVersion: v1
-          kind: Pod
-          metadata:
-            name: kube-vip
-            namespace: kube-system
-          spec:
-            containers:
-            - args:
-              - manager
-              env:
-              - name: vip_arp
-                value: "true"
-              - name: port
-                value: "6443"
-              - name: vip_nodename
-                valueFrom:
-                  fieldRef:
-                    fieldPath: spec.nodeName
-              - name: vip_interface
-                value: eth0
-              - name: vip_subnet
-                value: "32"
-              - name: dns_mode
-                value: first
-              - name: dhcp_mode
-                value: ipv4
-              - name: cp_enable
-                value: "true"
-              - name: cp_namespace
-                value: kube-system
-              - name: svc_enable
-                value: "true"
-              - name: svc_leasename
-                value: plndr-svcs-lock
-              - name: vip_leaderelection
-                value: "true"
-              - name: vip_leasename
-                value: plndr-cp-lock
-              - name: vip_leaseduration
-                value: "5"
-              - name: vip_renewdeadline
-                value: "3"
-              - name: vip_retryperiod
-                value: "1"
-              - name: address
-                value: 10.11.99.50
-              - name: prometheus_server
-                value: :2112
-              image: ghcr.io/kube-vip/kube-vip:v1.0.4
-              imagePullPolicy: IfNotPresent
-              name: kube-vip
-              resources: {}
-              securityContext:
-                capabilities:
-                  add:
-                  - NET_ADMIN
-                  - NET_RAW
-                  drop:
-                  - ALL
-              volumeMounts:
-              - mountPath: /etc/kubernetes/admin.conf
-                name: kubeconfig
-            hostAliases:
-            - hostnames:
-              - kubernetes
-              ip: 127.0.0.1
-            hostNetwork: true
-            volumes:
-            - hostPath:
-                path: /etc/kubernetes/super-admin.conf
-              name: kubeconfig
-          status: {}
+    - name: Pull kube-vip image
+      ansible.builtin.shell: |
+        export KVVERSION=$(curl -sL https://api.github.com/repos/kube-vip/kube-vip/releases | jq -r ".[0].name")
+        ctr image pull ghcr.io/kube-vip/kube-vip:$KVVERSION
+      run_once: true
+      delegate_to: "{{ groups['control_plane'][0] }}"
+
+    - name: Generate kube-vip manifest on first control plane
+      ansible.builtin.shell: |
+        export VIP=10.11.99.50
+        export INTERFACE=eth0
+        export KVVERSION=$(curl -sL https://api.github.com/repos/kube-vip/kube-vip/releases | jq -r ".[0].name")
+        ctr run --rm --net-host ghcr.io/kube-vip/kube-vip:$KVVERSION vip /kube-vip manifest pod \
+          --interface $INTERFACE \
+          --address $VIP \
+          --controlplane \
+          --services \
+          --arp \
+          --leaderElection | tee /etc/kubernetes/manifests/kube-vip.yaml
+      run_once: true
+      delegate_to: "{{ groups['control_plane'][0] }}"
+
+    - name: Update kube-vip to use super-admin.conf for bootstrap
+      ansible.builtin.replace:
+        path: /etc/kubernetes/manifests/kube-vip.yaml
+        regexp: 'path: /etc/kubernetes/admin.conf'
+        replace: 'path: /etc/kubernetes/super-admin.conf'
+      run_once: true
+      delegate_to: "{{ groups['control_plane'][0] }}"
 
     - name: kubeadm init
       ansible.builtin.command: >
@@ -289,27 +241,49 @@
       run_once: true
       delegate_to: "{{ groups['control_plane'][0] }}"
 
+    - name: Update kube-vip to use admin.conf after bootstrap
+      ansible.builtin.replace:
+        path: /etc/kubernetes/manifests/kube-vip.yaml
+        regexp: 'path: /etc/kubernetes/super-admin.conf'
+        replace: 'path: /etc/kubernetes/admin.conf'
+      run_once: true
+      delegate_to: "{{ groups['control_plane'][0] }}"
+
+    - name: Wait for kube-vip to be ready
+      ansible.builtin.wait_for:
+        host: "10.11.99.50"
+        port: 6443
+        timeout: 300
+      run_once: true
+      delegate_to: "{{ groups['control_plane'][0] }}"
+
+    - name: Verify cluster is accessible
+      ansible.builtin.command: kubectl --kubeconfig=/etc/kubernetes/super-admin.conf get nodes
+      register: cluster_status
+      retries: 10
+      delay: 15
+      run_once: true
+      delegate_to: "{{ groups['control_plane'][0] }}"
+
     - name: Deploy Flannel
       ansible.builtin.command: >
-        kubectl apply -f https://github.com/flannel-io/flannel/releases/latest/download/kube-flannel.yml
+        kubectl --kubeconfig=/etc/kubernetes/super-admin.conf apply -f https://github.com/flannel-io/flannel/releases/latest/download/kube-flannel.yml --validate=false
       register: flannel_deploy
       failed_when: flannel_deploy.rc != 0
       run_once: true
       delegate_to: "{{ groups['control_plane'][0] }}"
 
     - name: Wait for Flannel pods to be ready
-      ansible.builtin.command: kubectl get pods -n kube-flannel -o jsonpath='{.items[*].status.phase}'
+      ansible.builtin.command: kubectl --kubeconfig=/etc/kubernetes/super-admin.conf get pods -n kube-flannel -o jsonpath='{.items[*].status.phase}'
       register: flannel_status
       until: "'Pending' not in flannel_status.stdout and 'ContainerCreating' not in flannel_status.stdout"
-      retries: 30
+      retries: 60
       delay: 10
       run_once: true
       delegate_to: "{{ groups['control_plane'][0] }}"
     
     - name: Save and show join command
-      ansible.builtin.shell: "kubeadm token create --print-join-command | tee /root/join.sh"
-      args:
-        creates: /root/join.sh
+      ansible.builtin.shell: "KUBECONFIG=/etc/kubernetes/super-admin.conf kubeadm token create --print-join-command | tee /root/join.sh"
       register: join_cmd
       run_once: true
       delegate_to: "{{ groups['control_plane'][0] }}"
@@ -371,16 +345,13 @@
 
     - name: Get kubeadm join command with cert key
       ansible.builtin.shell: |
-        kubeadm token create --print-join-command --certificate-key $(kubeadm init phase upload-certs --upload-certs | tail -1)
-      args:
-        creates: /root/join-control-plane.sh
-      register: join_cp_cmd
+        KUBECONFIG=/etc/kubernetes/super-admin.conf kubeadm token create --print-join-command --certificate-key $(KUBECONFIG=/etc/kubernetes/super-admin.conf kubeadm init phase upload-certs --upload-certs | tail -1)
+      register: join_cp_cmd_output
       run_once: true
       delegate_to: "{{ groups['control_plane'][0] }}"
-
     - name: Set join command fact for control-plane
       ansible.builtin.set_fact:
-        join_cp_cmd: "{{ join_cp_cmd.stdout | trim }} --control-plane"
+        join_cp_cmd: "{{ join_cp_cmd_output.stdout | trim }} --control-plane"
       when: inventory_hostname != groups['control_plane'][0]
 
     - name: Write join script on target (control-plane)
@@ -390,12 +361,48 @@
         content: "{{ join_cp_cmd }}"
       when: inventory_hostname != groups['control_plane'][0]
 
+    - name: Pull kube-vip image on additional control plane nodes
+      ansible.builtin.shell: |
+        export KVVERSION=$(curl -sL https://api.github.com/repos/kube-vip/kube-vip/releases | jq -r ".[0].name")
+        ctr image pull ghcr.io/kube-vip/kube-vip:$KVVERSION
+      when: inventory_hostname != groups['control_plane'][0]
+
+    - name: Generate kube-vip manifest on additional control plane nodes
+      ansible.builtin.shell: |
+        export VIP=10.11.99.50
+        export INTERFACE=eth0
+        export KVVERSION=$(curl -sL https://api.github.com/repos/kube-vip/kube-vip/releases | jq -r ".[0].name")
+        ctr run --rm --net-host ghcr.io/kube-vip/kube-vip:$KVVERSION vip /kube-vip manifest pod \
+          --interface $INTERFACE \
+          --address $VIP \
+          --controlplane \
+          --services \
+          --arp \
+          --leaderElection | tee /etc/kubernetes/manifests/kube-vip.yaml
+      when: inventory_hostname != groups['control_plane'][0]
+
+    - name: Wait for VIP to be accessible from joining nodes
+      ansible.builtin.wait_for:
+        host: "10.11.99.50"
+        port: 6443
+        timeout: 120
+      when: inventory_hostname != groups['control_plane'][0]
+
+    - name: Test API server connectivity before join
+      ansible.builtin.command: curl -k https://10.11.99.50:6443/healthz
+      register: api_health
+      when: inventory_hostname != groups['control_plane'][0]
+      ignore_errors: true
+
     - name: Execute join (idempotent, control-plane)
       ansible.builtin.command: "{{ join_cp_cmd }}"
       args:
         creates: /etc/kubernetes/kubelet.conf
       register: node_join_cp
       failed_when: node_join_cp.rc != 0 and 'already exists' not in node_join_cp.stderr
+      retries: 3
+      delay: 30
+      until: node_join_cp.rc == 0 or 'already exists' in node_join_cp.stderr
       when: inventory_hostname != groups['control_plane'][0]
 
     - name: Verify node joined successfully (control-plane)
