tidy up playbooks

--- a/new-k8s/ansible/infra-resources/provision-infisical-operator.yaml
+++ b/new-k8s/ansible/infra-resources/provision-infisical-operator.yaml
@@ -4,6 +4,8 @@
   gather_facts: false
   vars:
     deployment_namespace: infisical
+  environment:
+    KUBECONFIG: "{{ lookup('env', 'HOME') }}/.kube/config"
 
   tasks:
     - name: Add Infisical Helm repository
