some minor fixes

--- a/new-k8s/ansible/infra-resources/provision-grafana-prometheus.yaml
+++ b/new-k8s/ansible/infra-resources/provision-grafana-prometheus.yaml
@@ -248,6 +248,10 @@
               limits:
                 cpu: 500m
                 memory: 512Mi
+          kubeProxy:
+            enabled: false
+          kubeEtcd:
+            enabled: true
           kube-state-metrics:
             enabled: true
           nodeExporter:
