--- a/new-k8s/ansible/provision-kube-vip-lb.yml
+++ b/new-k8s/ansible/provision-kube-vip-lb.yml
@@ -78,8 +78,11 @@
             name: kube-vip-cloud-controller
           rules:
             - apiGroups: [""]
-              resources: ["services", "services/status", "nodes", "endpoints"]
-              verbs: ["list", "get", "watch", "update"]
+              resources: ["services", "services/status"]
+              verbs: ["list", "get", "watch", "update", "patch"]
+            - apiGroups: [""]
+              resources: ["nodes", "endpoints", "events"]
+              verbs: ["list", "get", "watch", "create", "update", "patch"]
             - apiGroups: [""]
               resources: ["configmaps"]
               verbs: ["list", "get", "watch"]
